# infradb-core

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
include/infradb/core/: Engine.hpp
include/infradb/execution/: VectorBatch.hpp
include/infradb/memory/: Pool.hpp
src/: main.cpp
src/core/: Engine.cpp
src/execution/: VectorBatch.cpp
src/python/: bindings.cpp
